@@ -32,3 +32,4 @@ plugins.zm_geo_ip.version = 0.1.0
 plugins.zm_token.version = 0.1.0
 plugins.zm_ssu.version = 0.1.0
 plugins.zm_firephp.version = 0.1.0
+plugins.zm_whos_online.version = 0.1.0
