@@ -1,0 +1,13 @@
+This plugin provides the ZenMagick version of zen-cart's who's online functionality.
+
+
+Installation
+============
+1) Unzip this plugin into the zenmagick/plugins directory.
+2) Install plugin using the ZenMagick Plugin Manager.
+3) Set up your sidebox.
+4) Enjoy.
+
+
+Sidebox sample
+==============
