@@ -33,6 +33,8 @@ Release 0.9.3
 - add new optional parameter to ZMToolboxMacro::productPrice() that allows to
   explicitely enable/disable tax
 - add/improve unit tests
+- move who's online code into plugin
+- add ZMTestCase base class to allow comparing arrays
 
 Release 0.9.2
 - add database support for data type blob
